--- a/scss/site.scss
+++ b/scss/site.scss
@@ -190,6 +190,11 @@ body {
     background-size: cover;
     background-position: center;
     filter: grayscale(90%);
+    transition: filter 0.5s;
+
+    &:hover {
+      filter: none;
+    }
   }
 
   .right {
